--- a/Event_api/EventPLus_api_senai/Eventplus_api_senai.csproj
+++ b/Event_api/EventPLus_api_senai/Eventplus_api_senai.csproj
@@ -6,9 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	  <RootNamespace>Eventplus_api_senai</RootNamespace>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <UserSecretsId>5f20e735-dcaf-40a3-b9a1-0649ccf46f2d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.ContentSafety" Version="1.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
